<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg14">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_teacher"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/bg14"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shubham.onlineattendance.RegisterTeacher"
    >

    <TextView
        android:text="@string/RegisterPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:id="@+id/textView7" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/fname"
        android:textColorHint="#abcfe0"
        android:ems="10"
        android:textStyle="italic"
        android:id="@+id/fname"

        tools:ignore="HardcodedText"
        android:textColor="#e0ffff" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/mname"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:id="@+id/mname"
        android:textColorHint="#abcfe0"
        tools:ignore="HardcodedText"

        android:textColor="#e0ffff" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Lastname"
        android:ems="10"
        android:id="@+id/lname"
        android:textStyle="italic"
        android:textColorHint="#abcfe0"
        tools:ignore="HardcodedText"

        android:textColor="#e0ffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textStyle="italic"
        android:textColorHint="#abcfe0"
        android:hint="@string/Email"
        android:id="@+id/emails"

        android:textColor="#e0ffff" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/Phoone_no"
        android:textColorHint="#abcfe0"
        android:ems="10"
        android:textStyle="italic"
        android:id="@+id/phoneno"
        android:textColor="#e0ffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/Address"
        android:textStyle="italic"
        android:ems="10"
        android:textColorHint="#abcfe0"
        android:id="@+id/sphone"
        tools:ignore="HardcodedText,TextFields"
        android:textColor="#e0ffff"
         />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColorHint="#abcfe0"
        android:id="@+id/Username1"
        android:hint="Password"
        android:textStyle="normal|italic"
        tools:ignore="HardcodedText"
        android:textColor="#e0ffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Cpassword"
        android:textColorHint="#abcfe0"

        android:hint="Confirm Password"
        android:textStyle="normal|italic"
        android:textColor="#e0ffff"
        tools:ignore="HardcodedText" />


    <Button
        android:text="@string/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg"
        android:layout_marginTop="60dp"
        tools:ignore="HardcodedText,TextViewEdits,UnusedAttribute"
        android:contextClickable="true"
        android:cursorVisible="true"
        android:onClick="@string/Register" />
</LinearLayout>
</ScrollView>
</RelativeLayout>