<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg14">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/bg14"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shubham.onlineattendance.RegisterStudent"
    tools:ignore="ScrollViewSize">

    <TextView
        android:text="@string/RegisterPage"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:id="@+id/textView7"
        tools:ignore="HardcodedText" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <EditText
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/fname"
        android:textColorHint="#abcfe0"
        android:ems="10"
        android:textStyle="italic"
        android:id="@+id/fname"
        tools:ignore="HardcodedText"
        android:textColor="#e0ffff" />
    <EditText
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/mname"
        android:ems="10"
        android:textStyle="italic"
        android:id="@+id/mname"
        android:textColorHint="#abcfe0"
        tools:ignore="HardcodedText"
        android:textColor="#e0ffff" />
    <EditText
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Lastname"
        android:ems="10"
        android:id="@+id/lname"
        android:textStyle="italic"
        android:textColorHint="#abcfe0"
        tools:ignore="HardcodedText"
        android:textColor="#e0ffff" />


    <EditText
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textStyle="italic"
        android:textColorHint="#abcfe0"
        android:hint="@string/Email"
        android:id="@+id/emails"
        android:textColor="#e0ffff" />

    <EditText
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/Phoone_no"
        android:textColorHint="#abcfe0"
        android:ems="10"
        android:textStyle="italic"
        android:id="@+id/phoneno"
        android:textColor="#e0ffff" />

    <EditText
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/Address"
        android:textStyle="italic"
        android:ems="10"
        android:textColorHint="#abcfe0"
        android:id="@+id/sphone"
        tools:ignore="HardcodedText,TextFields"
        android:textColor="#e0ffff" />





    <EditText
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColorHint="#abcfe0"
        android:id="@+id/Username1"
        android:hint="Password"
        android:textStyle="normal|italic"
        android:textColor="#e0ffff"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Cpassword"
        android:textColorHint="#abcfe0"
        android:hint="Confirm Password"
        android:textStyle="normal|italic"
        android:textColor="#e0ffff"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textColorHint="#abcfe0"
        android:id="@+id/number"
        android:hint="Enter Semester"
        android:textColor="#e0ffff"
        android:textStyle="normal|italic"
        tools:ignore="HardcodedText" />
        </LinearLayout>
    </ScrollView>


    <Button
        android:text="@string/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg"
        android:layout_marginTop="1dp"
        tools:ignore="HardcodedText,TextViewEdits,UnusedAttribute"
        android:contextClickable="true"
        android:cursorVisible="true"
        android:onClick="@string/Register" />


</LinearLayout>

</ScrollView></RelativeLayout>