<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg14">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_parents"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/bg14"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shubham.onlineattendance.RegisterParents"
    tools:ignore="ScrollViewSize">

    <TextView
        android:text="@string/RegisterPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:id="@+id/textView7"
        tools:ignore="HardcodedText" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:hint="@string/fname"
        android:textColorHint="#abcfe0"
        android:ems="10"
        android:textStyle="italic"
        android:id="@+id/fname"
        tools:ignore="HardcodedText"
        android:textColor="#abcfe0" />

    <EditText
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/mname"
        android:ems="10"
        android:textStyle="italic"
        android:id="@+id/mname"
        android:textColorHint="#abcfe0"
        tools:ignore="HardcodedText"
        android:textColor="#ffffee" />
    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Lastname"
        android:ems="10"
        android:id="@+id/lname"
        android:textStyle="italic"
        android:textColorHint="#abcfe0"
        tools:ignore="HardcodedText"

        android:textColor="#e0ffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textStyle="italic"
        android:textColorHint="#abcfe0"
        android:hint="@string/Email"
        android:id="@+id/emails"
        android:textColor="#e0ffff" />





    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/Phoone_no"
        android:textColorHint="#abcfe0"
        android:ems="10"
        android:textStyle="italic"
        android:id="@+id/phoneno"
        android:textColor="#e0ffff" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="Son phone no"
        android:textStyle="italic"
        android:ems="10"
        android:textColorHint="#abcfe0"
        android:id="@+id/sphone"
        tools:ignore="HardcodedText"
        android:textColor="#e0ffff" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColorHint="#abcfe0"
        android:id="@+id/Username1"
        android:hint="Password"
        android:textStyle="normal|italic"
        tools:ignore="HardcodedText"
        android:textColor="#e0ffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Cpassword"
        android:textColorHint="#abcfe0"
        android:hint="Confirm Password"
        android:textStyle="normal|italic"
        android:textColor="#e0ffff"
        tools:ignore="HardcodedText" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:text="@string/Register"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:id="@+id/reg"
        tools:ignore="HardcodedText,TextViewEdits,UnusedAttribute"
        android:contextClickable="true"
        android:cursorVisible="true"
        android:layout_marginTop="50dp"
            android:onClick="@string/Register" />
</LinearLayout>
</ScrollView></RelativeLayout>