<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg14">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/bg14"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shubham.onlineattendance.LoginPage">

    <TextView
        android:text="@string/LoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textStyle="bold|italic"
        android:textSize="20dp"
        android:id="@+id/textView2"
        tools:ignore="HardcodedText,SpUsage,UnusedAttribute"
        android:textAllCaps="false" />

    <TextView
        android:text="@string/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginTop="36dp"
        tools:ignore="HardcodedText"
        android:textStyle="bold|italic"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="example@gamil.com"
        android:textStyle="italic"
        android:ems="10"
        android:textColorHint="#abcfe0"
        android:textColor="#e0fff0"
        android:id="@+id/Username1"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Password1"
        android:textColorHint="#abcfe0"
        android:hint="**********"
        android:textStyle="italic"
        android:textColor="#e0fff0"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="@string/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        tools:ignore="HardcodedText"
        android:textColor="@android:color/background_light"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:layout_below="@+id/Username1"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginTop="15dp" />

    <Button
        android:text="@string/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LoginButton"
        tools:ignore="HardcodedText,TextViewEdits,UnusedAttribute"
        android:textStyle="italic"
        android:contextClickable="true"
        android:cursorVisible="true"
        android:onClick="@string/Login"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/SignUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:textStyle="italic"
        tools:ignore="HardcodedText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="@string/SignUP" />

    <RadioButton
        android:text="Forget Your Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#efffff"
        android:id="@+id/forgetpassword"
        android:shadowColor="#eeffaa"
        tools:ignore="HardcodedText"
        android:layout_below="@+id/Password1"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="18dp" />
</RelativeLayout>
</ScrollView></RelativeLayout>