<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/password_verification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg14"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shubham.onlineattendance.PasswordVerification">


    <TextView
        android:text="@string/Verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true" />


    <Button
        android:text="@string/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PassVerify"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="HardcodedText,TextViewEdits,UnusedAttribute"
        android:contextClickable="true"
        android:cursorVisible="true"
        android:onClick="@string/verify" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/s7"
        android:id="@+id/imageView3"
        android:layout_above="@+id/PassVerify"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:textStyle="italic|bold"
        android:id="@+id/Otp"
        android:text="Please Note Your password For Future Login"
        android:textColor="#e0ff00"
        tools:ignore="HardcodedText,TextViewEdits"
        android:layout_below="@+id/textView10"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        android:ems="10"
        android:textColor="#e0fff0"
        android:textColorHint="#aabeff"
        android:textStyle="italic"
        android:id="@+id/Username1"
        tools:ignore="TextFields,TextViewEdits"
        android:layout_below="@+id/mobileno"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/mobileno"
        android:inputType="phone"
        android:hint="Phone No"
        android:textColor="#e0ffff"
        android:textColorHint="#aabeff"
        android:textStyle="normal|italic"
        tools:ignore="HardcodedText"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/Otp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3" />

    <TextView
        android:text="Check Email:-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textStyle="normal|bold|italic"
        android:textColor="#e0fff0"
        android:textSize="17sp"
        android:layout_alignTop="@+id/Username1"
        android:layout_alignLeft="@+id/mobileno"
        android:layout_alignStart="@+id/mobileno"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/Password"
        android:ems="10"
        android:textColor="#e0fff0"
        android:textStyle="italic"
        android:id="@+id/Cpassword"
        android:textColorHint="#aabeff"
        tools:ignore="TextFields,TextViewEdits"
        android:layout_above="@+id/imageView3"
        android:layout_alignRight="@+id/imageView3"
        android:layout_alignEnd="@+id/imageView3" />

    <TextView
        android:text="Check Pass:-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView17"
        android:textStyle="normal|bold|italic"
        android:textColor="#e0fff0"
        android:textSize="17sp"
        tools:ignore="HardcodedText"
        android:layout_alignBaseline="@+id/Cpassword"
        android:layout_alignBottom="@+id/Cpassword"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3" />
</RelativeLayout>
